[gd_scene load_steps=20 format=3 uid="uid://cumojo4vtowmv"]

[ext_resource type="Script" path="res://objects/toon/laff_meter.gd" id="1_k1sjt"]
[ext_resource type="Texture2D" uid="uid://dy5ow0hhwlmlw" path="res://ui_assets/player_ui/laff_meter/dog.png" id="2_0oixq"]
[ext_resource type="Texture2D" uid="uid://csw1srjt6dik3" path="res://ui_assets/player_ui/laff_meter/laff_eyes.png" id="2_3paw8"]
[ext_resource type="Texture2D" uid="uid://p82unmxrapek" path="res://ui_assets/player_ui/laff_meter/LM_frown.png" id="3_gnyfo"]
[ext_resource type="FontFile" uid="uid://815gwlftl5ik" path="res://fonts/impress-bt.ttf" id="5_eeki7"]
[ext_resource type="Texture2D" uid="uid://b2alrmk2lu72p" path="res://ui_assets/player_ui/laff_meter/LM_smile.png" id="6_eplsu"]
[ext_resource type="Texture2D" uid="uid://haevgp75ibxd" path="res://ui_assets/player_ui/laff_meter/laff_tooth_6.png" id="7_hj011"]
[ext_resource type="Texture2D" uid="uid://blj6ypf7rapcx" path="res://ui_assets/player_ui/laff_meter/laff_tooth_5.png" id="8_g8w8l"]
[ext_resource type="Texture2D" uid="uid://cm01d37r8142d" path="res://ui_assets/player_ui/laff_meter/laff_tooth_4.png" id="9_0k7ii"]
[ext_resource type="Texture2D" uid="uid://c763iug7kvoux" path="res://ui_assets/player_ui/laff_meter/laff_tooth_3.png" id="10_h3dym"]
[ext_resource type="Texture2D" uid="uid://dhudp4eaby8v3" path="res://ui_assets/player_ui/laff_meter/laff_tooth_2.png" id="11_i0d0j"]
[ext_resource type="Texture2D" uid="uid://bmuiytdt7a3fu" path="res://ui_assets/player_ui/laff_meter/laff_tooth_1.png" id="12_egrgc"]
[ext_resource type="Texture2D" uid="uid://b6q5aajwc2o6m" path="res://ui_assets/player_ui/laff_meter/LM_grin.png" id="13_e7lcx"]
[ext_resource type="Texture2D" uid="uid://gysbtuh143kb" path="res://ui_assets/misc/unlock.png" id="14_l2l4e"]

[sub_resource type="LabelSettings" id="LabelSettings_1b8o8"]
font = ExtResource("5_eeki7")
font_size = 11
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_h38gy"]
font = ExtResource("5_eeki7")
font_size = 28
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_xd5is"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anchor:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Anchor:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_ai162"]
resource_name = "bounce"
length = 0.8
step = 0.0
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anchor:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1.25, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.4, 0.8)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Anchor:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1.25, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.4, 0.8)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5ij2f"]
_data = {
"RESET": SubResource("Animation_xd5is"),
"bounce": SubResource("Animation_ai162")
}

[node name="LaffMeter" type="Control"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.0
offset_top = -37.0
offset_right = 41.0
offset_bottom = 53.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
script = ExtResource("1_k1sjt")

[node name="Anchor" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Meter" type="TextureRect" parent="Anchor"]
self_modulate = Color(0.345098, 0.819608, 0.952941, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -40.5
offset_right = 48.0
offset_bottom = 40.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_0oixq")
expand_mode = 1

[node name="Dead" type="Control" parent="Anchor/Meter"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -18.0
offset_top = -23.0
offset_right = 22.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Frown" type="TextureRect" parent="Anchor/Meter/Dead"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -36.0
offset_right = 36.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_gnyfo")

[node name="Healthy" type="Control" parent="Anchor/Meter"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Eyes" type="TextureRect" parent="Anchor/Meter/Healthy"]
layout_mode = 0
offset_left = -17.3333
offset_top = -16.0
offset_right = 61.6667
offset_bottom = 50.0
texture = ExtResource("2_3paw8")
expand_mode = 1

[node name="Health" type="Label" parent="Anchor/Meter/Healthy/Eyes"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.8333
offset_top = -13.6667
offset_right = 0.166656
offset_bottom = 7.33334
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
text = "15"
label_settings = SubResource("LabelSettings_1b8o8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MaxHealth" type="Label" parent="Anchor/Meter/Healthy/Eyes"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 0.499992
offset_top = -13.6667
offset_right = 21.5
offset_bottom = 7.33334
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
text = "15"
label_settings = SubResource("LabelSettings_1b8o8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Mouth" type="TextureRect" parent="Anchor/Meter/Healthy"]
visible = false
layout_mode = 0
offset_left = -16.0
offset_top = -19.3333
offset_right = 59.0
offset_bottom = 55.6667
texture = ExtResource("6_eplsu")

[node name="Tooth1" type="TextureRect" parent="Anchor/Meter/Healthy/Mouth"]
layout_mode = 0
offset_left = 4.0
offset_top = 36.6667
offset_right = 25.0
offset_bottom = 57.6667
texture = ExtResource("7_hj011")

[node name="Tooth2" type="TextureRect" parent="Anchor/Meter/Healthy/Mouth"]
layout_mode = 0
offset_left = 10.0
offset_top = 43.3333
offset_right = 31.0
offset_bottom = 64.3333
texture = ExtResource("8_g8w8l")

[node name="Tooth3" type="TextureRect" parent="Anchor/Meter/Healthy/Mouth"]
layout_mode = 0
offset_left = 18.0
offset_top = 46.0
offset_right = 39.0
offset_bottom = 70.0
texture = ExtResource("9_0k7ii")

[node name="Tooth4" type="TextureRect" parent="Anchor/Meter/Healthy/Mouth"]
layout_mode = 0
offset_left = 38.0
offset_top = 47.0
offset_right = 58.0
offset_bottom = 68.0
texture = ExtResource("10_h3dym")

[node name="Tooth5" type="TextureRect" parent="Anchor/Meter/Healthy/Mouth"]
layout_mode = 0
offset_left = 47.0
offset_top = 45.0
offset_right = 64.0
offset_bottom = 64.0
texture = ExtResource("11_i0d0j")
expand_mode = 1

[node name="Tooth6" type="TextureRect" parent="Anchor/Meter/Healthy/Mouth"]
layout_mode = 0
offset_left = 54.0
offset_top = 39.3333
offset_right = 71.0
offset_bottom = 56.3333
texture = ExtResource("12_egrgc")
expand_mode = 1

[node name="Grin" type="TextureRect" parent="Anchor/Meter/Healthy"]
layout_mode = 0
offset_left = -14.0
offset_top = -11.0
offset_right = 58.0
offset_bottom = 53.0
texture = ExtResource("13_e7lcx")

[node name="Lock" type="TextureRect" parent="Anchor/Meter"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -7.0
offset_top = -43.0
offset_right = 45.0
offset_bottom = 9.0
grow_vertical = 0
texture = ExtResource("14_l2l4e")
expand_mode = 1

[node name="ReviveLabel" type="Label" parent="Anchor"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 42.3333
offset_top = -4.33333
offset_right = 82.3333
offset_bottom = 31.6667
text = "x1"
label_settings = SubResource("LabelSettings_h38gy")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5ij2f")
}

[connection signal="mouse_entered" from="." to="." method="hover"]
[connection signal="mouse_exited" from="." to="." method="stop_hover"]
